add redis blacklist, change role rigths, fix some responses
